fix: array of rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "rewrites": {
-        "source": "/api/github/:match",
-        "destination": "https://api.github.com/:match"
-    }
+    "rewrites": [
+        {
+            "source": "/api/github/:match",
+            "destination": "https://api.github.com/:match"
+        }
+    ]
 }
