feat: show repo info

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/(.*)",
+            "destination": "/"
+        },
+        {
             "source": "/api/github/:match",
             "destination": "https://api.github.com/:match"
         }
