fix: update proxy

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "source": "/api/github/:match*",
+            "destination": "https://api.github.com/:match*"
         },
         {
-            "source": "/api/github/:match",
-            "destination": "https://api.github.com/:match"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
